# heizungssteuerungCore

./: .CMakeLists.txt.user.swn  .CMakeLists.txt.user.swo  .bashrc  .gitignore  CMakeLists.txt  CMakeLists.txt.user.47ddb0d  CMakeLists.txt.user.4fdcd9c  CMakeLists.txt.user.532a47e  CORE  README.md  buildCORE.sh  clock.cpp  clock.h  main.cpp  main.h  mysqlcon.cpp  mysqlcon.h  util.h
DB______TOERASE/: DB.h
IoD/: COMprotocol.h  IoD.cpp  IoD.h
ModuleFramework/: control.cpp  control.h  module.cpp  module.h  modulemanager.cpp  modulemanager.h
REST/: REST.cpp  REST.h  crow_all.h  eventhandler.cpp  eventhandler.h
REST/HardwareModule/: index.cpp
REST/HardwareModule/config/: index.cpp
REST/HardwareModule/config/adc/: index.cpp
REST/HardwareModule/config/io/: index.cpp
REST/HardwareModule/value/: index.cpp
REST/HardwareModule/value/adc/: index.cpp
REST/HardwareModule/value/io/: index.cpp
REST/ModuleManager/: index.cpp
REST/ModuleManager/connection/: index.cpp
REST/ModuleManager/module/: index.cpp
REST/ModuleManager/module/parameters/: index.cpp
